# pinn-macroscopic-digital-twin

./: .gitignore  README.md  folder_structure.md  pyproject.toml
colab_export/: dataset_registry.csv
gliosim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: batch_harmonizer.py  batch_pseudo_labeler.py  create_mock_data.py  evaluate_digital_twin.py  export_to_cloud.py  select_cohort.py  simulate.py  simulate_patient.py  train_simulator.py
src/data/: cross_sectional_dm.py  longitudinal_dm.py
src/models/: differentiable_solver.py  pinn_simulator.py  unet_baseline.py
src/physics/: fisher_kolmogorov.py
tools/: profile_upenn_metadata.py
