[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gliosim"
version = "0.1.0"
description = "PINN-based Macroscopic Digital Twin for Glioblastoma Progression"
readme = "README.md"
authors = [
    { name = "Ruben Lucendo", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core Deep Learning
    "torch>=2.2.0",
    "lightning>=2.2.0",
    
    # Medical Imaging & Transforms
    "monai>=1.3.0",
    "nibabel>=5.2.0",
    
    # Configuration & Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "omegaconf>=2.3.0",
    
    # Experiment Tracking
    "wandb>=0.16.0",
    
    # Data manipulation and Science
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # Flake8 errors, Pyflakes, Isort